--- a/aulasDeJava/023_JAVAFX/SiloBytes/src/main/resources/data/novoUsuario.fxml
+++ b/aulasDeJava/023_JAVAFX/SiloBytes/src/main/resources/data/novoUsuario.fxml
@@ -132,7 +132,7 @@
                         <Font name="Times New Roman" size="18.0" />
                      </font>
                   </TextField>
-                  <TextField fx:id="campoSenha" layoutX="691.0" layoutY="359.0" prefHeight="40.0" prefWidth="270.0">
+                  <TextField fx:id="campoSenha" layoutX="691.0" layoutY="359.0" prefHeight="40.0" prefWidth="270.0" promptText="*******************">
                      <font>
                         <Font name="Times New Roman" size="18.0" />
                      </font>
@@ -152,7 +152,7 @@
                         </Lighting>
                      </effect>
                   </Label>
-                  <Text fx:id="lblMsg" layoutX="571.0" layoutY="441.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cadastrado com sucesso!" textAlignment="CENTER" wrappingWidth="226.0">
+                  <Text layoutX="571.0" layoutY="441.0" opacity="0.2" strokeType="OUTSIDE" strokeWidth="0.0" text="..." textAlignment="CENTER" wrappingWidth="226.0">
                      <font>
                         <Font name="Times New Roman" size="18.0" />
                      </font>
