--- a/aulasDeJava/023_JAVAFX/SiloBytes/src/main/resources/data/listarUsuario.fxml
+++ b/aulasDeJava/023_JAVAFX/SiloBytes/src/main/resources/data/listarUsuario.fxml
@@ -97,7 +97,7 @@
                         <Font name="Times New Roman" size="24.0" />
                      </font>
                   </Button>
-                  <Label alignment="CENTER" layoutX="21.0" layoutY="14.0" opacity="0.4" prefHeight="125.0" prefWidth="1339.0" style="-fx-alignment: center;" text="Listar usuário" wrapText="true">
+                  <Label alignment="CENTER" layoutX="21.0" layoutY="14.0" onDragDetected="#limparCampos" opacity="0.4" prefHeight="125.0" prefWidth="1339.0" style="-fx-alignment: center;" text="Listar usuário" wrapText="true">
                      <font>
                         <Font name="Times New Roman" size="90.0" />
                      </font>
@@ -117,7 +117,10 @@
                         <Font name="Times New Roman" size="18.0" />
                      </font>
                   </Text>
-                  <TextArea fx:id="inputList" layoutX="372.0" layoutY="139.0" prefHeight="300.0" prefWidth="624.0" />
+                  <TextArea fx:id="inputList" editable="false" focusTraversable="false" layoutX="372.0" layoutY="139.0" onDragDetected="#limparCampos" prefHeight="300.0" prefWidth="624.0" wrapText="true">
+                     <font>
+                        <Font name="Times New Roman" size="16.0" />
+                     </font></TextArea>
                </children>
             </Pane>
             <Pane maxWidth="1567.0" prefHeight="112.0" prefWidth="1366.0" style="-fx-border-color: #ccc; -fx-max-width: 1366;">
